tests/ui/traits/const-traits/super-traits-fail-2.yn.stderr
error: `[const]` is not allowed here
  --> $DIR/super-traits-fail-2.rs:14:32
   |
LL | #[cfg(any(yn, nn))] trait Bar: [const] Foo {}
   |                                ^^^^^^^
   |
note: this trait is not `const`, so it cannot have `[const]` trait bounds
  --> $DIR/super-traits-fail-2.rs:14:21
   |
LL | #[cfg(any(yn, nn))] trait Bar: [const] Foo {}
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `T: [const] Foo` is not satisfied
  --> $DIR/super-traits-fail-2.rs:21:7
   |
LL |     x.a();
   |       ^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
